# zkbec

./: README.md  zkbec.cabal
src/Data/: Field.hs
src/Data/Field/: F17.hs
src/Zkbec/: Prelude.hs
src/Zkbec/Compiler/: Compile.hs  Evaluate.hs  LinComb.hs  Pretty.hs  Utils.hs  VarNames.hs
src/Zkbec/Examples/: ExprGroup.hs  Utils.hs
src/Zkbec/Language/: Core.hs  Environment.hs  Evaluator.hs  Generator.hs  Parser.hs  Printer.hs  Var.hs
test/: Main.hs
test/Compiler/: Evaluation.hs  FakeIntField.hs  Golden.hs  Utils.hs
test/Compiler/golden/De-Morgan-and/: not-and.golden  or-not.golden
test/Compiler/golden/De-Morgan-or/: and-not.golden  not-or.golden
test/Compiler/golden/false/: and-not-l.golden  and-not-r.golden  if-id-not-id.golden  main.golden  xor-same.golden
test/Compiler/golden/id/: and-same.golden  if-if-if.golden  main.golden  or-same.golden
test/Compiler/golden/if/: main.golden
test/Compiler/golden/if-and/: main.golden
test/Compiler/golden/if-if/: main.golden
test/Compiler/golden/if-or/: main.golden
test/Compiler/golden/not/: main.golden
test/Compiler/golden/true/: if-id-id-not.golden  main.golden  or-not-l.golden  or-not-r.golden  xor-not-same.golden
test/Language/: Textual.hs
